<resources>
    <string name="app_name">Поиск вакансий</string>
    <string name="team">Команда</string>
    <string name="working_on_the_app">Над приложением работали</string>
    <string name="alexander_antipin">Антипин Александр</string>
    <string name="sergey_boikov">Бойков Сергей</string>
    <string name="sukhanov_temirlan">Суханов Темирлан</string>
    <string name="details_screen">Vacancy Details Screen</string>
    <string name="favourites_screen">Favourites Screen</string>
    <string name="main_screen">Main Screen</string>
    <string name="main">Главная</string>
    <string name="favourite">Избранное</string>
    <string name="enter_request">Введите запрос</string>
    <string name="empty_search">Не удалось получить список вакансий</string>
    <string name="no_such_vacancies">Таких вакансий нет</string>
    <string name="filtr">Фильтр</string>
    <string name="no_internet">Нет интернета</string>
    <string name="search_screen_image">search_screen_image</string>
    <string name="company_logo">company logo</string>
    <string name="salary_range">от %1$s до %2$s %3$s</string>
    <string name="salary_from">от %1$s %2$s</string>
    <string name="salary_to">до %1$s %2$s</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="job_description">Описание вакансии</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="vacancy">Ваканcия</string>
    <string name="vacancy_not_found_deleted">Вакансия не найдена или удалена</string>
    <string name="error_service">Ошибка сервера</string>
    <string name="empty_favourite_list">Список пуст</string>
    <string name="error_favourite_list">Не удалось получить список вакансий</string>
    <string name="error_not_found">Нет подключения к интернету и вакансия не найдена в избранном</string>
    <string name="enter_value">Введите сумму</string>
    <string name="expect_salary">Ожидаемая зарплата</string>
    <string name="not_show_without_salary">Не показывать без зарплаты</string>
    <string name="work_area">Отрасль</string>
    <string name="area">Место работы</string>
    <string name="check_your_internet_connection">Проверьте подключение к интернету</string>
    <string name="error">Ошибка</string>
    <string name="clear_filters_button">Сбросить</string>
    <string name="apply">Применить</string>
    <string name="filtering_settings">Настройки фильтрации</string>
    <string name="select">Выбрать</string>
    <string name="enter_industry">Введите отрасль</string>
    <plurals name="vacancies_count">
        <item quantity="one">Найдена %d вакансия</item>
        <item quantity="few">Найдено %d вакансии</item>
        <item quantity="many">Найдено %d вакансий</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>
    <string name="empty_industry_list">Не удалось получить список</string>
</resources>

