<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutStyle">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar_menu"
        app:title="@string/app_name"
        app:titleMargin="@dimen/indent_8dp"
        app:titleTextAppearance="@style/Medium22">

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/frameSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <EditText
            android:id="@+id/searchView"
            style="@style/Medium16"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/indent_16dp"
            android:layout_marginTop="@dimen/indent_8dp"
            android:layout_marginEnd="@dimen/indent_16dp"
            android:layout_marginBottom="@dimen/indent_8dp"
            android:background="@drawable/edittext"
            android:drawableEnd="@drawable/search_24px"
            android:hint="@string/enter_request"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/indent_16dp"
            android:paddingEnd="@dimen/indent_16dp"
            android:singleLine="true"
            android:textColor="@color/black_universal"
            android:textColorHint="@color/gray_white"
            android:textCursorDrawable="@drawable/cursor_color" />

        <ImageView
            android:id="@+id/buttonCleanSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:contentDescription="@string/search_screen_image"
            android:padding="@dimen/indent_16dp"
            android:paddingEnd="@dimen/indent_32dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/close_24px"
            tools:ignore="RtlSymmetry" />
    </FrameLayout>

    <TextView
        android:id="@+id/infoSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_blue_rounded"
        android:gravity="center"
        android:paddingStart="@dimen/indent_12dp"
        android:paddingTop="@dimen/indent_4dp"
        android:paddingEnd="@dimen/indent_12dp"
        android:paddingBottom="@dimen/indent_4dp"
        android:text="@string/no_such_vacancies"
        android:textAppearance="@style/Regular16"
        android:textColor="@color/white_universal"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/frameSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/image_man_big_eyes"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameSearch" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/indent_48dp"
            android:layout_height="@dimen/indent_48dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/bottom_progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoSearch"
            tools:listitem="@layout/item_vacancy"
            tools:visibility="invisible">

        </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="imageView,errorText" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/indent_328dp"
            android:layout_height="@dimen/indent_223dp"
            android:contentDescription="@string/search_screen_image"
            android:scaleType="centerCrop"
            android:src="@drawable/image_kat"
            app:layout_constraintBottom_toTopOf="@+id/errorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoSearch"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/errorText"
            style="@style/placeholderMessageStyle"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/Medium22"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <ProgressBar
            android:id="@+id/bottom_progress_bar"
            android:layout_width="@dimen/indent_48dp"
            android:layout_height="@dimen/indent_48dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>
